DEV: ARREGLO VISTAS

--- a/template/APLICACION/vistafun.html
+++ b/template/APLICACION/vistafun.html
@@ -22,13 +22,9 @@
       <a class="btn btn-info  btn-md" href="/clientes"> CLIENTES 👤</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </li>
     <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/medicos"> MASCOTAS 🐕</a> &nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
       <a class="btn btn-info  btn-md" href="/func"> FUNCIONARIOS 👨🏻‍⚕️</a> &nbsp;&nbsp;&nbsp;
     </li>
   </ul>
-
 
 
 
@@ -77,8 +73,8 @@
     {% endif %}
 
 <!-- rutas de los URL -->
-    <a href="../" class="btn btn-danger"> VOLVER </a>
-    <a href="../addmedicos" class="btn btn-info float-end"> AGREGAR MEDICO</a>
+    <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="../addmedicos" class="btn btn-info float-mid"> AGREGAR MEDICO</a>
 
 
 
