--- a/template/APLICACION/vistacitas.html
+++ b/template/APLICACION/vistacitas.html
@@ -10,58 +10,53 @@
 </head>
 
 <body class="container mt-5">
+<!-- ----------------  MENU -------------------------->
 
-  <ul class="nav nav-tabs" role="tablist"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="../"> HOME 🏠 </a> &nbsp;&nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/citas"> CITAS 📅 </a> &nbsp;&nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/clientes"> CLIENTES 👤</a> &nbsp;&nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/medicos"> MASCOTAS 🐕</a> &nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/func"> FUNCIONARIOS 👨🏻‍⚕️</a> &nbsp;&nbsp;&nbsp;
-    </li>
-  </ul>
+<ul class="nav nav-tabs" role="tablist"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <li class="nav-item" role="presentation">
+    <a class="btn btn-info  btn-md" href="../"> HOME 🏠 </a> &nbsp;&nbsp;&nbsp;&nbsp;
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="btn btn-info  btn-md" href="/citas"> CITAS 📅 </a> &nbsp;&nbsp;&nbsp;&nbsp;
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="btn btn-info  btn-md" href="/clientes"> CLIENTES 👤</a> &nbsp;&nbsp;&nbsp;&nbsp;
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="btn btn-info  btn-md" href="/func"> FUNCIONARIOS 👨🏻‍⚕️</a> &nbsp;&nbsp;&nbsp;
+  </li>
+</ul>
 
 
 
-
-
-
-
-
-
-
-
-
+<!-- ----------------  CODIGO -------------------------->
 
     <div class="alert alert-info display-1 text-center"> LISTADO DE CITAS </div>
 
     {% if cita %}
 
     <table class="table table-striped table-inverse table-responsive">
-        <thead class="thead-inverse">
-            <tr>
-                <th>ASUNTO</th>
-                <th>PACIENTE</th>
-                <th>MEDICO</th>
-                <th>FECHA (MM/DD/AAAA)</th>
+        <thead  class="thead-inverse" 
+            <tr >
+              <th>FECHA (MM/DD/AAAA)</th>
+              <th>FUNCIONARIO</th>
+              <th>CLIENTE</th>
+              <th>MASCOTA</th>
+              <th>TIPO ATENCION</th>
             </tr>
         </thead>
         <tbody>
             {% for cit in cita %}
-
+            <!--  poner los cabezales de la tabla de la base de datos   -->
             <tr>
                 <td> {{ cit.fecha  }}</td>
-                <td> {{ cit.cliente_id   }}</td>
                 <td> {{ cit.funcionario_id  }}</td>
-                <td aria-placeholder="MM/DD/AAAA"> {{ cit.fecha  }} </td>
+                <td> {{ cit.cliente_id   }}</td>
+                <td> {{ cit.mascota_id  }}</td>
+                <td> {{ cit.tipoat_id  }}</td>
+
+
+
                 <td><a class="btn btn-primary btn-sm" href="/editarcitas/{{ cit.id }}"  role="button"> Actualizar📝 </a></td>
                 <td><a class="btn btn-primary btn-sm" href="/eliminarcitas/{{ cit.id }}"  role="button"> Eliminar ❌ </a></td>
 
@@ -78,12 +73,8 @@
 
     {% endif %}
 
-    <a href="../" class="btn btn-danger"> VOLVER </a>
-    <a href="../addcitas" class="btn btn-info float-end"> AGREGAR CITA </a>
+    <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="../addcitas" class="btn btn-info float-mid"> AGREGAR CITA </a>
 
-
-
-
-    
 </body>
 </html>
