--- a/template/APLICACION/vistaclient.html
+++ b/template/APLICACION/vistaclient.html
@@ -22,9 +22,6 @@
       <a class="btn btn-info  btn-md" href="/clientes"> CLIENTES 👤</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </li>
     <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/medicos"> MASCOTAS 🐕</a> &nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
       <a class="btn btn-info  btn-md" href="/func"> FUNCIONARIOS 👨🏻‍⚕️</a> &nbsp;&nbsp;&nbsp;
     </li>
   </ul>
@@ -35,10 +32,9 @@
 
 
 
-
     <div class="alert alert-info display-1 text-center"> LISTADO DE PACIENTES </div>
 
-    {% if pacientes %}
+    {% if clientes %}
     
 
     <table class="table table-striped table-inverse table-responsive">
@@ -46,15 +42,23 @@
             <tr>
                 <th>RUT</th>
                 <th>NOMBRE</th>
+                <th>DIRECCION</th>
                 <th>FONO</th>
+                <th>MASCOTA</th>
             </tr>
         </thead>
         <tbody>
-            {% for pac in pacientes %}
+            {% for cli in clientes %}
             <tr>
-                <td> {{ pac.rut  }}</td>
-                <td> {{ pac.nombre  }}</td>
-                <td> {{ pac.fono  }}</td>
+                <td> {{ cli.rut_f  }}</td>
+                <td> {{ cli.nombre_cli  }}</td>
+                <td> {{ cli.direccion  }}</td>
+                <td> {{ cli.fono  }}</td>
+                <td> {{ cli.nom_mas_id  }}</td>
+
+
+
+
                 <td><a class="btn btn-primary btn-sm" href="/editarpacientes/{{ pac.id }}"  role="button"> Actualizar📝 </a></td>
                 <td><a class="btn btn-primary btn-sm" href="/eliminarpacientes/{{ pac.id }}"  role="button"> Eliminar ❌ </a></td>
 
@@ -72,8 +76,9 @@
     {% endif %}
 
 <!-- rutas de los URL -->
-    <a href="../" class="btn btn-danger"> VOLVER </a>
-    <a href="../addpacientes" class="btn btn-info float-end"> AGREGAR PACIENTE</a>
+    <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="../addpacientes" class="btn btn-info float-mid"> AGREGAR PACIENTE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="../" class="btn btn-info float-mid"> AGREGAR MASCOTA</a>
     
 </body>
 </html>
