--- a/template/APLICACION/vistaclient.html
+++ b/template/APLICACION/vistaclient.html
@@ -26,11 +26,7 @@
     </li>
   </ul>
 
-
-
-
-
-
+<!--  ---------------- CODIGO ---------------- -->
 
     <div class="alert alert-info display-1 text-center"> LISTADO DE PACIENTES </div>
 
@@ -78,7 +74,7 @@
 <!-- rutas de los URL -->
     <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="../addpacientes" class="btn btn-info float-mid"> AGREGAR PACIENTE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="../" class="btn btn-info float-mid"> AGREGAR MASCOTA</a>
+    <a href="../addmasc" class="btn btn-info float-mid"> AGREGAR MASCOTA</a>
     
 </body>
 </html>
