--- a/template/APLICACION/vistafun.html
+++ b/template/APLICACION/vistafun.html
@@ -27,16 +27,7 @@
   </ul>
 
 
-
-
-
-
-
-
-
-
-
-
+<!--  ---------------- CODIGO ---------------- -->
 
     <div class="alert alert-info display-1 text-center"> LISTADO DE MEDICOS </div>
 
@@ -73,7 +64,7 @@
     {% endif %}
 
 <!-- rutas de los URL -->
-    <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     <a href="../addmedicos" class="btn btn-info float-mid"> AGREGAR MEDICO</a>
 
 
