--- a/template/APLICACION/agregarcitas.html
+++ b/template/APLICACION/agregarcitas.html
@@ -22,19 +22,11 @@
       <a class="btn btn-info  btn-md" href="/clientes"> CLIENTES 👤</a> &nbsp;&nbsp;&nbsp;&nbsp;
     </li>
     <li class="nav-item" role="presentation">
-      <a class="btn btn-info  btn-md" href="/medicos"> MASCOTAS 🐕</a> &nbsp;&nbsp;&nbsp;
-    </li>
-    <li class="nav-item" role="presentation">
       <a class="btn btn-info  btn-md" href="/func"> FUNCIONARIOS 👨🏻‍⚕️</a> &nbsp;&nbsp;&nbsp;
     </li>
   </ul>
 
-
-
-
-
-
-
+<!--  ---------------- CODIGO ---------------- -->
 
 
     <div class=" alert alert-info display-1 text-center"> LISTADO DE CITAS </div>
