FIX: Se arreglo los HTML para agregar y mostrar datos

--- a/template/APLICACION/agregarclient.html
+++ b/template/APLICACION/agregarclient.html
@@ -28,7 +28,7 @@
 
 <!--  ---------------- CODIGO ---------------- -->
 
-    <div class=" alert alert-info display-1 text-center"> LISTADO DE PACIENTES </div>
+    <div class=" alert alert-info display-1 text-center"> LISTADO DE CLIENTES </div>
 
     <form method = 'post'>
         {{ form.as_p }}
