--- a/template/APLICACION/agregarmasc.html
+++ b/template/APLICACION/agregarmasc.html
@@ -33,6 +33,10 @@
       {{ form.as_p }}
       {% csrf_token %}
       <input type="submit" value="AGREGAR MASCOTA" class="btn btn-info">
+      <!-- ---------------  CREAR VISTAS PARA AGREGAR RAZA Y TIPO DE MASCOTA  ---------------- -->
+      <a class="btn btn-info" href="../"> AGREGAR RAZA </a>
+      <a class="btn btn-info" href="../"> AGREGAR TIPO DE MASCOTA </a>
+
     </form>
 
 
