ADD: Se agrego vista de RAZA, Tipo Mascota y Tipo At.  Para agregar estos datos a la bd

--- a/template/APLICACION/agregarmasc.html
+++ b/template/APLICACION/agregarmasc.html
@@ -28,20 +28,20 @@
 
 <!--  ---------------- CODIGO ---------------- -->
 
-    <div class=" alert alert-info display-1 text-center"> LISTADO DE MASCOTAS </div>
+    <div class=" alert alert-info display-1 text-center"> AGREGAR MASCOTAS </div>
     <form method = 'post'>
       {{ form.as_p }}
       {% csrf_token %}
       <input type="submit" value="AGREGAR MASCOTA" class="btn btn-info">
       <!-- ---------------  CREAR VISTAS PARA AGREGAR RAZA Y TIPO DE MASCOTA  ---------------- -->
-      <a class="btn btn-info" href="../"> AGREGAR RAZA </a>
-      <a class="btn btn-info" href="../"> AGREGAR TIPO DE MASCOTA </a>
+      <a class="btn btn-secondary" href="../"> AGREGAR RAZA </a>
+      <a class="btn btn-secondary" href="../"> AGREGAR TIPO DE MASCOTA </a>
 
     </form>
 
 
 <br><br>
-     <a class="btn btn-info" href="../clientes"> VOLVER A CLIENTES </a>
+     <a class="btn btn-danger" href="../clientes"> VOLVER A CLIENTES </a>
     
 </body>
 </html>
