--- a/template/APLICACION/vistaclient.html
+++ b/template/APLICACION/vistaclient.html
@@ -74,7 +74,7 @@
 <!-- rutas de los URL -->
     <a href="../" class="btn btn-danger"> VOLVER </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="../addpacientes" class="btn btn-info float-mid"> AGREGAR CLIENTE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="../addmasc" class="btn btn-info float-mid"> AGREGAR MASCOTA</a>
+    <a href="../addmasc" class="btn btn-secondary float-mid"> AGREGAR MASCOTA</a>
     
 </body>
 </html>
