FIX: Se arreglaron errores en los html

--- a/template/APLICACION/agregarcitas.html
+++ b/template/APLICACION/agregarcitas.html
@@ -39,7 +39,7 @@
     </form>
 
 <br><br>
-     <a class="btn btn-info" href="../citas"> VOLVER A CITAS </a>
+     <a class="btn btn-danger" href="../citas"> VOLVER A CITAS </a>
     
 </body>
 </html>
