--- a/template/APLICACION/agregarfun.html
+++ b/template/APLICACION/agregarfun.html
@@ -39,7 +39,7 @@
     </form>
 
 <br>
-     <a class="btn btn-info" href="../func"> VOLVER A FUNCIONARIOS </a>
+     <a class="btn btn-danger" href="../func"> VOLVER A FUNCIONARIOS </a>
     
 </body>
 </html>
