--- a/template/APLICACION/agregarclient.html
+++ b/template/APLICACION/agregarclient.html
@@ -38,7 +38,7 @@
     </form>
 
 <br><br>
-     <a class="btn btn-info" href="../clientes"> VOLVER A CLIENTES </a>
+     <a class="btn btn-danger" href="../clientes"> VOLVER A CLIENTES </a>
     
 </body>
 </html>
