DEV: ARREGLO VISTAS AHORA AGREGA TODO

--- a/template/APLICACION/agregarcitas.html
+++ b/template/APLICACION/agregarcitas.html
@@ -36,6 +36,7 @@
         {% csrf_token %}
 
         <input type="submit" value="AGREGAR CITA" class="btn btn-info">
+        <a class="btn btn-secondary" href="../addatencion"> AGREGAR TIPOS DE ATENCION </a>
     </form>
 
 <br><br>
