--- a/template/APLICACION/agregarmasc.html
+++ b/template/APLICACION/agregarmasc.html
@@ -34,8 +34,8 @@
       {% csrf_token %}
       <input type="submit" value="AGREGAR MASCOTA" class="btn btn-info">
       <!-- ---------------  CREAR VISTAS PARA AGREGAR RAZA Y TIPO DE MASCOTA  ---------------- -->
-      <a class="btn btn-secondary" href="../"> AGREGAR RAZA </a>
-      <a class="btn btn-secondary" href="../"> AGREGAR TIPO DE MASCOTA </a>
+      <a class="btn btn-secondary" href="../addraza"> AGREGAR RAZA </a>
+      <a class="btn btn-secondary" href="../addtipo"> AGREGAR TIPO DE MASCOTA </a>
 
     </form>
 
