FIX: Se arreglo errores en los html

--- a/template/APLICACION/vistacitas.html
+++ b/template/APLICACION/vistacitas.html
@@ -48,10 +48,10 @@
             <!--  poner los cabezales de la tabla de la base de datos   -->
             <tr>
                 <td> {{ cit.fecha  }}</td>
-                <td> {{ cit.funcionario_id  }}</td>
-                <td> {{ cit.cliente_id   }}</td>
-                <td> {{ cit.mascota_id  }}</td>
-                <td> {{ cit.tipoat_id  }}</td>
+                <td> {{ cit.funcionario  }}</td>
+                <td> {{ cit.cliente   }}</td>
+                <td> {{ cit.mascota  }}</td>
+                <td> {{ cit.atencion  }}</td>
 
 
 
