--- a/template/APLICACION/vistaclient.html
+++ b/template/APLICACION/vistaclient.html
@@ -46,11 +46,11 @@
         <tbody>
             {% for cli in clientes %}
             <tr>
-                <td> {{ cli.rut_f  }}</td>
-                <td> {{ cli.nombre_cli  }}</td>
+                <td> {{ cli.rut_cliente  }}</td>
+                <td> {{ cli.nombre_cliente  }}</td>
                 <td> {{ cli.direccion  }}</td>
                 <td> {{ cli.fono  }}</td>
-                <td> {{ cli.nom_mas_id  }}</td>
+                <td> {{ cli.nombre_mascota  }}</td>
 
 
 
