--- a/template/APLICACION/vistafun.html
+++ b/template/APLICACION/vistafun.html
@@ -44,8 +44,8 @@
         <tbody>
             {% for fun in funcionario %}
             <tr>
-                <td> {{ fun.rut_f  }}</td>
-                <td> {{ fun.nombre_fun  }}</td>
+                <td> {{ fun.rut_funcionario  }}</td>
+                <td> {{ fun.nombre_funcionario  }}</td>
                 <td> {{ fun.especialidad  }}</td>
 
                 <!-- COLOCAR EL ID QUE SE ENCUENTRA EN LA TABLA DE FUNCIONARIOS DE LA BASE DE DATOS  -->
