ADD: Eliminar y Modificar

--- a/template/APLICACION/vistaclient.html
+++ b/template/APLICACION/vistaclient.html
@@ -55,8 +55,8 @@
 
 
                 <!-- COLOCAR EL ID QUE SE ENCUENTRA EN LA TABLA DE CLIENTES DE LA BASE DE DATOS  -->
-                <td><a class="btn btn-primary btn-sm" href="/editarpacientes/{{ pac.id }}"  role="button"> Actualizar📝 </a></td>
-                <td><a class="btn btn-primary btn-sm" href="/eliminarpacientes/{{ pac.id }}"  role="button"> Eliminar ❌ </a></td>
+                <td><a class="btn btn-primary btn-sm" href="/editarpacientes/{{ cli.id }}"  role="button"> Actualizar📝 </a></td>
+                <td><a class="btn btn-primary btn-sm" href="/eliminarcliente/{{ cli.id }}"  role="button"> Eliminar ❌ </a></td>
 
 </tr>
             {% endfor %}
