--- a/template/APLICACION/vistafun.html
+++ b/template/APLICACION/vistafun.html
@@ -50,7 +50,7 @@
 
                 <!-- COLOCAR EL ID QUE SE ENCUENTRA EN LA TABLA DE FUNCIONARIOS DE LA BASE DE DATOS  -->
                 <td><a class="btn btn-primary btn-sm" href="/editarmedicos/{{ fun.id }}"  role="button"> Actualizar📝 </a></td>
-                <td><a class="btn btn-primary btn-sm" href="/eliminarmedicos/{{ fun.id }}"  role="button"> Eliminar ❌ </a></td>
+                <td><a class="btn btn-primary btn-sm" href="/eliminarfuncionario/{{ fun.id }}"  role="button"> Eliminar ❌ </a></td>
 
             </tr>
             {% endfor %}
